--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: 1.15
 
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2s
+        uses: actions/checkout@v2
 
       - name: Test
         run: make test
